<resources>
    <string name="app_name">智能锁</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">nickname</string>
    <string name="nav_header_subtitle">手机号码: </string>
    <string name="nav_header_phone_num">88888888888</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">我的智能锁</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_add_lock">添加锁</string>
    <string name="menu_reset_pw">重置密码</string>
    <string name="menu_logout">退出登录</string>
    <string name="lock_name">我的锁</string>
    <string name="lock_status">状态:</string>
    <string name="lock_status_code">关闭</string>
    <string name="update_time">2019/12/17 13:47:05</string>
    <string name="open_lock">开锁</string>
    <string name="change_lock_name">更改锁名称</string>
    <string name="lock_record">查询开锁记录</string>
    <string name="lock_alarm_record">查询告警记录</string>
    <string name="delete_lock">删除锁</string>
    <string name="user_id">开锁用户ID:</string>
    <string name="user_id_num">1</string>
    <string name="alarm_message">锁编号2，测试报警</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="get_new_alarm">查询新告警</string>
    <string name="lock_id_name">锁ID:</string>
</resources>
