<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_lock"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_add_lock" />
        <item
            android:id="@+id/nav_reset_pw"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_reset_pw" />
    </group>

    <item android:title="我的账户">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
