<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.learn.lockopensystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_lock"
        android:name="com.learn.lockopensystem.ui.addlock.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_reset_pw"
        android:name="com.learn.lockopensystem.ui.resetpassword.ToolsFragment"
        android:label="@string/menu_add_lock"
        tools:layout="@layout/fragment_tools" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.learn.lockopensystem.ui.logout.SendFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>