<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lock_detail" />

    <Button
        android:id="@+id/open_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_round_rec_btn"
        android:gravity="center"
        android:text="@string/open_lock"
        android:textSize="15sp" />

    <Button
        android:id="@+id/change_lock_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_round_rec_btn"
        android:gravity="center"
        android:text="@string/change_lock_name"
        android:textSize="15sp" />

    <Button
        android:id="@+id/lock_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_round_rec_btn"
        android:gravity="center"
        android:text="@string/lock_record"
        android:textSize="15sp" />

    <Button
        android:id="@+id/lock_alarm_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_round_rec_btn"
        android:gravity="center"
        android:text="@string/lock_alarm_record"
        android:textSize="15sp" />

    <Button
        android:id="@+id/delete_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_round_rec_btn"
        android:gravity="center"
        android:text="@string/delete_lock"
        android:textSize="15sp" />


</LinearLayout>