<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp">

    <TextView
        android:id="@+id/alarm_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginEnd="15dp"
        android:textSize="14sp"
        android:background="@drawable/bg_round_rec" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alarm_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:text="@string/alarm_message"/>

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_time"/>

    </LinearLayout>

</LinearLayout>